force-app/main/default/objects/AAR_Publication__c/AAR_Publication__c.object-meta.xml
<CustomObject>
    <description
  >Tracks publications associated with an AAR record. Source can be manual entry or ORCID import. Field history enabled for 7-year Shield retention per BH-1126.</description>
    <label>AAR Publication</label>
    <nameField>
        <displayFormat>PUB-{0000}</displayFormat>
        <label>Publication Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AAR Publications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>