force-app/main/default/objects/AAR_Publication__c/fields/Article_Title__c.field-meta.xml
<CustomField>
    <fullName>Article_Title__c</fullName>
    <label>Article Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>