force-app/main/default/objects/AAR_Publication__c/fields/Author_List__c.field-meta.xml
<CustomField>
    <fullName>Author_List__c</fullName>
    <label>Author List</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>