force-app/main/default/objects/AAR_Publication__c/fields/Authorship_Role__c.field-meta.xml
<CustomField>
    <fullName>Authorship_Role__c</fullName>
    <label>Authorship Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First Author</fullName>
            </value>
            <value>
                <fullName>Co-Author</fullName>
            </value>
            <value>
                <fullName>Last / Senior Author</fullName>
            </value>
            <value>
                <fullName>Corresponding Author</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>