force-app/main/default/objects/AAR_Publication__c/fields/Epub_Date__c.field-meta.xml
<CustomField>
    <fullName>Epub_Date__c</fullName>
    <label>ePub Date</label>
    <type>Date</type>
</CustomField>