force-app/main/default/objects/AAR_Publication__c/fields/Is_Corresponding_Author__c.field-meta.xml
<CustomField>
    <fullName>Is_Corresponding_Author__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Corresponding Author</label>
    <type>Checkbox</type>
</CustomField>