force-app/main/default/objects/AAR_Publication__c/fields/Journal__c.field-meta.xml
<CustomField>
    <fullName>Journal__c</fullName>
    <label>Journal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>