force-app/main/default/objects/AAR_Publication__c/fields/PMID__c.field-meta.xml
<CustomField>
    <fullName>PMID__c</fullName>
    <label>PMID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>