force-app/main/default/objects/AAR_Publication__c/fields/Publication_Type__c.field-meta.xml
<CustomField>
    <fullName>Publication_Type__c</fullName>
    <label>Publication Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Peer-Reviewed</fullName>
            </value>
            <value>
                <fullName>Non-Peer-Reviewed</fullName>
            </value>
            <value>
                <fullName>In Progress - Submitted</fullName>
            </value>
            <value>
                <fullName>In Progress - Under Revision</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>