force-app/main/default/objects/AAR_Publication__c/fields/Publication_Year__c.field-meta.xml
<CustomField>
    <fullName>Publication_Year__c</fullName>
    <label>Publication Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>