force-app/main/default/objects/AAR_Publication__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual Entry</fullName>
                <default>true</default>
                <label>Manual Entry</label>
            </value>
            <value>
                <fullName>ORCID</fullName>
            </value>
            <value>
                <fullName>Grants System</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>