force-app/main/default/objects/AAR_Publication__c/fields/Source_Journal__c.field-meta.xml
<CustomField>
    <fullName>Source_Journal__c</fullName>
    <label>Source / Journal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>