force-app/main/default/objects/AAR_Publication__c/fields/WOS__c.field-meta.xml
<CustomField>
    <fullName>WOS__c</fullName>
    <label>WOS (Office Use Only)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>