force-app/main/default/objects/AAR_Publication__c/validationRules/Peer_Review_Needs_Epub_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Peer_Review_Needs_Epub_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Publication_Type__c, 'Peer-Reviewed'),
  ISBLANK(Epub_Date__c)
)</errorConditionFormula>
    <errorMessage
  >ePub Date is required for peer-reviewed publications.</errorMessage>
    <errorDisplayField>Epub_Date__c</errorDisplayField>
</ValidationRule>